backend/internal/architecture/testdata/valid/internal/modules/catalog/internal/domain/article.go
// Package domain owns catalog business values.
package domain

// Article is an immutable domain value in this compile fixture.
type Article struct{ Title string }
