backend/internal/architecture/testdata/invalid/internal/modules/bad/module.go
package bad

// Module is only fixture module shape.
type Module struct{}
